# Denise1

./: CMakeLists.txt  README.md  build.bat
dependencies/: CMakeLists.txt
dependencies/yxml/: yxml.c
legacy-projects/Grota3D/: build.bat
legacy-projects/Grota3D/src/: CMakeLists.txt  arquitetura.txt
legacy-projects/Grota3D/src/core/: array.c  array.h  colors.c  colors.h  list.c  list.h  math_unused.c  mathematics.c  mathematics.h  time.c
legacy-projects/Grota3D/src/engine/: graph.h
legacy-projects/Grota3D/src/graphics/: graphics.c  graphics.h
legacy-projects/Grota3D/src/graphics/3d/: basic_meshes.h  bsp.c  bsp.h  camera.c  camera.h  renderer.c  renderer.h
legacy-projects/Grota3D/src/graphics/system/: shaders.c  window.c  window.h
legacy-projects/Grota3D/src/graphics/ui/: ui.c  ui.h
legacy-projects/Grota3D/src/modules/: heightmap.c  heightmap.h  obj_loader.c  obj_loader.h  scripting.c  scripting.h
legacy-projects/Grota3D/src/modules/scripting/: input.h
legacy-projects/Grota3D/src/physics/: aabb.c  aabb.h  box.js
legacy-projects/Grota3D/src/targets/: modelviewer.c  modelviewer.rc  phx.c  player.c  test.c
legacy-projects/JustSurvive/: README.md  build.bat
legacy-projects/JustSurvive/src/: CMakeLists.txt
legacy-projects/JustSurvive/src/core/: list.h  mathematics.h
legacy-projects/JustSurvive/src/graphics/2d/: camera2d.c
legacy-projects/JustSurvive/src/graphics/3d/: camera3d.c  camera3d.h  sprites.h
legacy-projects/JustSurvive/src/physics/: physics2d.h
legacy-projects/JustSurvive/src/sinuca/: gui.c  gui.h  icone.rc  mesa.c  sinuca.c
legacy-projects/JustSurvive/src/sinuca/objetos/: bola.c  bola.h
legacy-projects/Sinuca2D/: build.bat
legacy-projects/Sinuca2D/src/: CMakeLists.txt
legacy-projects/Sinuca2D/src/core/: introspection.h  list.c  list.h  mathematics.h  time.c  time.h
legacy-projects/Sinuca2D/src/graphics/: graphics.c  graphics.h
legacy-projects/Sinuca2D/src/graphics/2d/: camera2d.h  sprites.c
legacy-projects/Sinuca2D/src/graphics/system/: window.c  window.h
legacy-projects/Sinuca2D/src/graphics/ui/: ui.c  ui.h
legacy-projects/Sinuca2D/src/modules/: resources.c  resources.h  uixml.c  uixml.h
legacy-projects/Sinuca2D/src/physics/: physics2d.c
legacy-projects/Sinuca2D/src/sinuca/: gameobject.c  gameobject.h  gui.c  mesa.h  sinuca.c
src/: ecs.h  main.c  shaders.c  shaders.h
src/core/: basic_meshes.h  denise.c  denise.h  dgl.c  dgl.h  dmath.c  dmath.h  dsystem.c  dsystem.h  structs.h
src/experiments/: html.c  sample.html  softgl.c
src/parsers/: html.c  sample.html
src/xmldecs/: ecs.h  main.c
